[gd_scene load_steps=114 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_3.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_6.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Fall/Warrior_Fall_2.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Jump/Warrior_Jump_2.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_4.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_5.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_1.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_1.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_10.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_9.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Fall/Warrior_Fall_1.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_3.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_2.png" type="Texture" id=15]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_5.png" type="Texture" id=16]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_8.png" type="Texture" id=17]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Jump/Warrior_Jump_3.png" type="Texture" id=18]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_1.png" type="Texture" id=19]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_5.png" type="Texture" id=20]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Fall/Warrior_Fall_3.png" type="Texture" id=21]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_1.png" type="Texture" id=22]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/idle/Warrior_Idle_6.png" type="Texture" id=23]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_2.png" type="Texture" id=24]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_2.png" type="Texture" id=25]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_8.png" type="Texture" id=26]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_1.png" type="Texture" id=27]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_4.png" type="Texture" id=28]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_10.png" type="Texture" id=29]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_7.png" type="Texture" id=30]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_11.png" type="Texture" id=31]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_1.png" type="Texture" id=32]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_4.png" type="Texture" id=33]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Jump/Warrior_Jump_1.png" type="Texture" id=34]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_9.png" type="Texture" id=35]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_4.png" type="Texture" id=36]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_6.png" type="Texture" id=37]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_6.png" type="Texture" id=38]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_5.png" type="Texture" id=39]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_2.png" type="Texture" id=40]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Attack/Warrior_Attack_12.png" type="Texture" id=41]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_7.png" type="Texture" id=42]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_3.png" type="Texture" id=43]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_3.png" type="Texture" id=44]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_7.png" type="Texture" id=45]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_6.png" type="Texture" id=46]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_11.png" type="Texture" id=47]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_9.png" type="Texture" id=48]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_4.png" type="Texture" id=49]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_4.png" type="Texture" id=50]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_5.png" type="Texture" id=51]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_5.png" type="Texture" id=52]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_6.png" type="Texture" id=53]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash/Warrior_Dash_3.png" type="Texture" id=54]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_3.png" type="Texture" id=55]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_4.png" type="Texture" id=56]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_7.png" type="Texture" id=57]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_8.png" type="Texture" id=58]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Crouch/Warrior_Crouch_2.png" type="Texture" id=59]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_1.png" type="Texture" id=60]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_3.png" type="Texture" id=61]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_8.png" type="Texture" id=62]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_6.png" type="Texture" id=63]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_5.png" type="Texture" id=64]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Death-Effect/Warrior_Death_10.png" type="Texture" id=65]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_2.png" type="Texture" id=66]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Run/Warrior_Run_7.png" type="Texture" id=67]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_1.png" type="Texture" id=68]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_4.png" type="Texture" id=69]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/UptoFall/Warrior_UptoFall_2.png" type="Texture" id=70]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_3.png" type="Texture" id=71]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Hurt-Effect/Warrior_hurt_2.png" type="Texture" id=72]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/UptoFall/Warrior_UptoFall_1.png" type="Texture" id=73]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_4.png" type="Texture" id=74]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_5.png" type="Texture" id=75]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_6.png" type="Texture" id=76]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/WallSlide/Warrior_WallSlide_1.png" type="Texture" id=77]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_1.png" type="Texture" id=78]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_2.png" type="Texture" id=79]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Edge-Idle/Warrior_Edge-Idle_3.png" type="Texture" id=80]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/WallSlide/Warrior_WallSlide_2.png" type="Texture" id=81]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/WallSlide/Warrior_WallSlide_3.png" type="Texture" id=82]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/EdgeGrab/Warrior_Edge-Grab_5.png" type="Texture" id=83]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/EdgeGrab/Warrior_Edge-Grab_1.png" type="Texture" id=84]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/EdgeGrab/Warrior_Edge-Grab_3.png" type="Texture" id=85]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/EdgeGrab/Warrior_Edge-Grab_2.png" type="Texture" id=86]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/EdgeGrab/Warrior_Edge-Grab_4.png" type="Texture" id=87]
[ext_resource path="res://src/StateMachine/PlayerSM.gd" type="Script" id=88]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Slide/Warrior-Slide_4.png" type="Texture" id=89]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Slide/Warrior-Slide_5.png" type="Texture" id=90]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Slide/Warrior-Slide_2.png" type="Texture" id=91]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Slide/Warrior-Slide_1.png" type="Texture" id=92]
[ext_resource path="res://assets/Player/Warrior/Individual Sprite/Slide/Warrior-Slide_3.png" type="Texture" id=93]
[ext_resource path="res://assets/Sounds/music/8Bit Tragic Mistake Loop.ogg" type="AudioStream" id=94]
[ext_resource path="res://assets/Sounds/retro sfx/PowerUp.wav" type="AudioStream" id=95]
[ext_resource path="res://assets/Sounds/WAV Casual SoundFX by Tim Beek/GameOver.wav" type="AudioStream" id=96]
[ext_resource path="res://assets/Sounds/Grass Running.wav" type="AudioStream" id=97]
[ext_resource path="res://assets/fonts/BitPotion Full Extended/BitPotion.ttf" type="DynamicFontData" id=98]
[ext_resource path="res://assets/Sounds/Grass 1.wav" type="AudioStream" id=99]
[ext_resource path="res://src/Effects/SlowTime.tscn" type="PackedScene" id=101]
[ext_resource path="res://assets/Effects/bubbles/Greyscale/16x16/bubble_3.png" type="Texture" id=103]
[ext_resource path="res://assets/Sounds/item_pickup/powerUp2.ogg" type="AudioStream" id=104]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 98 )

[sub_resource type="Animation" id=2]
resource_name = "Exit_level"
length = 1.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "move_in_cutscene"
}, {
"args": [  ],
"method": "end_cutscene"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}

[sub_resource type="Animation" id=3]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("LVLUP LABEL:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LVLUP LABEL:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8, 2.4, 3, 3.6, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 0.2 ),
"update": 0,
"values": [ Color( 0.25, 0.88, 0.82, 1 ), Color( 1, 0.843137, 0, 1 ), Color( 0.25, 0.88, 0.82, 1 ), Color( 1, 0.843137, 0, 1 ), Color( 0.25, 0.88, 0.82, 1 ), Color( 1, 0.843137, 0, 1 ), Color( 0.25, 0.88, 0.82, 1 ), Color( 0.25098, 0.878431, 0.819608, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LVLUP LABEL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.7 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 7, -72 ), Vector2( 7, -100 ) ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 24 ), ExtResource( 14 ), ExtResource( 33 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 30 ), ExtResource( 26 ) ],
"loop": false,
"name": "Attack1",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 11 ), ExtResource( 31 ), ExtResource( 41 ) ],
"loop": false,
"name": "Attack2",
"speed": 15.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 33 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 30 ), ExtResource( 30 ), ExtResource( 12 ) ],
"loop": false,
"name": "Attack3",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 59 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 52 ), ExtResource( 37 ) ],
"loop": true,
"name": "Crouch",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 40 ), ExtResource( 54 ), ExtResource( 28 ), ExtResource( 51 ), ExtResource( 38 ), ExtResource( 42 ) ],
"loop": true,
"name": "Dash",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 66 ), ExtResource( 43 ), ExtResource( 50 ), ExtResource( 16 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 17 ), ExtResource( 35 ), ExtResource( 29 ) ],
"loop": false,
"name": "Dash attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 15 ), ExtResource( 44 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 48 ), ExtResource( 65 ), ExtResource( 47 ) ],
"loop": false,
"name": "Death",
"speed": 10.0
}, {
"frames": [ ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ) ],
"loop": true,
"name": "Edge-idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 86 ), ExtResource( 85 ), ExtResource( 87 ), ExtResource( 83 ) ],
"loop": true,
"name": "EdgeGrab",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 5 ), ExtResource( 21 ) ],
"loop": true,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 72 ), ExtResource( 71 ), ExtResource( 69 ) ],
"loop": false,
"name": "Hurt",
"speed": 10.0
}, {
"frames": [ ExtResource( 92 ), ExtResource( 91 ), ExtResource( 93 ), ExtResource( 89 ), ExtResource( 90 ) ],
"loop": true,
"name": "Slide",
"speed": 10.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 70 ) ],
"loop": true,
"name": "UpToFall",
"speed": 12.0
}, {
"frames": [ ExtResource( 77 ), ExtResource( 81 ), ExtResource( 82 ) ],
"loop": true,
"name": "WallSlide",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 20 ), ExtResource( 23 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 6 ), ExtResource( 18 ) ],
"loop": true,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 25 ), ExtResource( 61 ), ExtResource( 36 ), ExtResource( 64 ), ExtResource( 63 ), ExtResource( 67 ), ExtResource( 62 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.46175, 15.7375 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.9102
height = 16.6758

[sub_resource type="CircleShape2D" id=7]
radius = 60.0079

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.260227 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 5.0
gravity = Vector3( 0, -1, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.0
scale = 0.4
scale_random = 0.3
scale_curve = SubResource( 9 )
color = Color( 0.905882, 0, 1, 1 )

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 5.0
gravity = Vector3( 0, -1, 0 )
initial_velocity = 15.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 20.0
scale = 0.4
scale_random = 0.3
scale_curve = SubResource( 9 )
color = Color( 0.92549, 0.815686, 0.0823529, 1 )

[node name="Player" type="KinematicBody2D" groups=["Persist", "player"]]
z_index = 2
collision_mask = 282
script = ExtResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 88 )

[node name="LVLUP LABEL" type="Label" parent="."]
visible = false
modulate = Color( 0.25, 0.88, 0.82, 1 )
margin_left = 7.0
margin_top = -72.0
margin_right = 47.0
margin_bottom = -7.00002
custom_fonts/font = SubResource( 1 )
text = "LVL UP!
+MAX HP
+DMG
+DEF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Exit_level = SubResource( 2 )
anims/LevelUpLabel = SubResource( 3 )

[node name="Effects" type="Node" parent="."]

[node name="SlowTime" parent="Effects" instance=ExtResource( 101 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5.0958, 4.15864 )
shape = SubResource( 5 )

[node name="NPCRaycasts" type="Node2D" parent="."]
position = Vector2( 0.381286, 20.7296 )

[node name="NPCRaycasterRight" type="RayCast2D" parent="NPCRaycasts"]
position = Vector2( -4.29154, -19.4841 )
scale = Vector2( 1, 0.883 )
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 128

[node name="NPCRaycasterLeft" type="RayCast2D" parent="NPCRaycasts"]
position = Vector2( -4.4178, -19.4841 )
scale = Vector2( 1, -0.885 )
enabled = true
cast_to = Vector2( -20, 0 )
collision_mask = 128

[node name="WallRaycasts" type="Node2D" parent="."]
visible = false
position = Vector2( 0.381286, 20.7296 )
scale = Vector2( 0.2, 0.2 )

[node name="LeftWallRaycast" type="Node2D" parent="WallRaycasts"]
position = Vector2( -111.089, -68.463 )

[node name="LeftWallRaycastTop" type="RayCast2D" parent="WallRaycasts/LeftWallRaycast"]
position = Vector2( 89, -68 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 8

[node name="LeftWallRaycastBottom" type="RayCast2D" parent="WallRaycasts/LeftWallRaycast"]
position = Vector2( 89, 8.14101 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 8

[node name="RightWallRaycast" type="Node2D" parent="WallRaycasts"]
position = Vector2( -21.4577, -23.463 )

[node name="RightWallRaycastTop" type="RayCast2D" parent="WallRaycasts/RightWallRaycast"]
position = Vector2( -1.52588e-05, -113 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 8

[node name="RightWallRaycastBottom" type="RayCast2D" parent="WallRaycasts/RightWallRaycast"]
position = Vector2( -0.631256, -36.859 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 8

[node name="AttackArea" type="Area2D" parent="." groups=["Sword"]]
position = Vector2( 0.381286, 20.7296 )
collision_layer = 0
collision_mask = 274

[node name="Attack1" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2( 17, -20.8 )
polygon = PoolVector2Array( -4.6, 14.2, 6.88546, 12.0653, 14.8404, 8.35303, 15.1992, 3.67653, 0.349083, -18.5152, -16.3364, -18.682, -36.8, -10, -35.4, -8.2, -18.2, -12.2, -2.8, -12.4 )
disabled = true

[node name="Attack2" type="CollisionPolygon2D" parent="AttackArea"]
position = Vector2( 13.2, -20.8 )
polygon = PoolVector2Array( -2.58675, 16.3656, 9.8, 3.8, 10.5461, -0.583599, 9.2, -8.4, -4.1582, -15.0634, -19, -20.2, -45.6, -21.8, -46, -13, -33.4, -2, -20.2, -11.4, 2.6, -2.4 )
disabled = true

[node name="DashAttack" type="CollisionPolygon2D" parent="AttackArea"]
visible = false
polygon = PoolVector2Array( 15.4, -3, 25.2, -2, 36.4, -16, 25.8, -31.2, 19.4, -35.2, 6.6, -38.4, -9.2, -36.4, -23, -33.2, -23.6, -27.6, -2.4, -31.4, 9, -30.4, 15.2, -20.8, 6.4, -9.8, 5.8, -6.2 )
disabled = true

[node name="HitBox" type="Area2D" parent="." groups=["Player_hitbox"]]
visible = false
position = Vector2( 1.26364, 20.6036 )
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -6.4858, -15.6646 )
shape = SubResource( 6 )

[node name="MagnetArea" type="Area2D" parent="."]
visible = false
position = Vector2( -5.0958, 1.24554 )
collision_layer = 0
collision_mask = 32
priority = 1.0
space_override = 2
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 500.0
linear_damp = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
position = Vector2( -2.86102e-06, -1.90735e-06 )
shape = SubResource( 7 )

[node name="Blood" type="Position2D" parent="."]
show_behind_parent = true
position = Vector2( -4.06384, 1.90105 )

[node name="Parry" type="Position2D" parent="."]
position = Vector2( 14.5147, -12.8272 )

[node name="PetTarget" type="Position2D" parent="."]
position = Vector2( -29.7915, -16.7163 )
__meta__ = {
"_gizmo_extents_": 20.0
}

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="WallSlideTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ExitCombatTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DeathTween" type="Tween" parent="."]

[node name="BattlePotionParticles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -4.06385, -2.39405 )
emitting = false
lifetime = 1.5
visibility_rect = Rect2( -5, -15, 10, 30 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 103 )

[node name="IronskinPotionParticles" type="Particles2D" parent="."]
show_behind_parent = true
position = Vector2( -4.06385, -2.39405 )
emitting = false
lifetime = 1.5
visibility_rect = Rect2( -5, -15, 10, 30 )
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 103 )

[node name="AudioLibrary" type="Node" parent="."]

[node name="RunSFX" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource( 97 )
volume_db = -22.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="AudioLibrary"]
pause_mode = 2
stream = ExtResource( 96 )
volume_db = -20.0

[node name="PickUpItem" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource( 104 )
volume_db = -25.0

[node name="GrassSFX" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource( 99 )

[node name="LevelUp" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource( 95 )
volume_db = -30.0

[node name="DeathMusic" type="AudioStreamPlayer" parent="AudioLibrary"]
pause_mode = 2
stream = ExtResource( 94 )
volume_db = -20.0

[connection signal="hurt" from="." to="StateMachine" method="_on_Player_hurt"]
[connection signal="hurt" from="." to="Effects/SlowTime" method="_on_Player_hurt"]
[connection signal="killed" from="." to="StateMachine" method="_on_Player_killed"]
[connection signal="on_hit_enemy" from="." to="Effects/SlowTime" method="_on_Player_on_hit_enemy"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite" to="StateMachine" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="WallSlideStickyTimer" to="StateMachine" method="_on_WallSlideStickyTimer_timeout"]
[connection signal="timeout" from="ExitCombatTimer" to="." method="_on_ExitCombatTimer_timeout"]
